// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`svg2png properly render  1`] = `
Object {
  "data": Array [
    137,
    80,
    78,
    71,
    13,
    10,
    26,
    10,
    0,
    0,
    0,
    13,
    73,
    72,
    68,
    82,
    0,
    0,
    0,
    4,
    0,
    0,
    0,
    4,
    8,
    6,
    0,
    0,
    0,
    169,
    241,
    158,
    126,
    0,
    0,
    0,
    18,
    73,
    68,
    65,
    84,
    120,
    156,
    99,
    100,
    96,
    96,
    248,
    15,
    196,
    112,
    64,
    134,
    0,
    0,
    154,
    84,
    4,
    1,
    73,
    70,
    250,
    6,
    0,
    0,
    0,
    0,
    73,
    69,
    78,
    68,
    174,
    66,
    96,
    130,
  ],
  "type": "Buffer",
}
`;

exports[`svg2png properly render the HK flag 1`] = `
Object {
  "data": Array [
    137,
    80,
    78,
    71,
    13,
    10,
    26,
    10,
    0,
    0,
    0,
    13,
    73,
    72,
    68,
    82,
    0,
    0,
    0,
    30,
    0,
    0,
    0,
    20,
    8,
    6,
    0,
    0,
    0,
    154,
    171,
    141,
    196,
    0,
    0,
    1,
    168,
    73,
    68,
    65,
    84,
    120,
    156,
    237,
    148,
    59,
    44,
    131,
    81,
    20,
    199,
    255,
    95,
    163,
    72,
    211,
    162,
    12,
    141,
    247,
    36,
    33,
    169,
    152,
    108,
    38,
    143,
    5,
    3,
    177,
    120,
    68,
    36,
    22,
    9,
    49,
    152,
    60,
    6,
    163,
    212,
    172,
    101,
    49,
    168,
    80,
    137,
    129,
    8,
    233,
    132,
    65,
    186,
    120,
    12,
    180,
    40,
    11,
    210,
    122,
    166,
    137,
    234,
    35,
    45,
    77,
    181,
    206,
    189,
    77,
    215,
    186,
    95,
    35,
    181,
    244,
    55,
    158,
    156,
    147,
    223,
    189,
    231,
    220,
    115,
    165,
    187,
    186,
    162,
    56,
    254,
    129,
    172,
    56,
    99,
    164,
    45,
    86,
    181,
    116,
    64,
    211,
    213,
    15,
    207,
    204,
    40,
    98,
    1,
    31,
    69,
    228,
    145,
    150,
    152,
    73,
    117,
    11,
    107,
    136,
    62,
    185,
    224,
    110,
    107,
    160,
    136,
    124,
    210,
    18,
    87,
    238,
    219,
    17,
    185,
    182,
    67,
    213,
    218,
    1,
    119,
    107,
    3,
    162,
    207,
    46,
    138,
    202,
    67,
    72,
    156,
    223,
    216,
    132,
    220,
    90,
    61,
    34,
    78,
    7,
    34,
    183,
    151,
    168,
    62,
    126,
    64,
    204,
    239,
    67,
    232,
    208,
    202,
    111,
    173,
    106,
    110,
    231,
    237,
    14,
    108,
    91,
    16,
    220,
    217,
    160,
    138,
    223,
    17,
    22,
    151,
    154,
    119,
    185,
    132,
    9,
    153,
    92,
    81,
    84,
    140,
    200,
    213,
    121,
    66,
    26,
    12,
    34,
    250,
    120,
    15,
    117,
    119,
    63,
    62,
    76,
    243,
    240,
    154,
    12,
    84,
    149,
    26,
    33,
    177,
    66,
    83,
    152,
    104,
    175,
    211,
    78,
    55,
    175,
    135,
    103,
    114,
    132,
    42,
    21,
    136,
    199,
    190,
    33,
    41,
    149,
    208,
    142,
    77,
    81,
    92,
    207,
    165,
    225,
    19,
    27,
    62,
    79,
    109,
    84,
    149,
    26,
    33,
    49,
    131,
    9,
    117,
    198,
    117,
    32,
    78,
    233,
    113,
    9,
    175,
    163,
    189,
    80,
    86,
    84,
    67,
    59,
    62,
    141,
    48,
    137,
    222,
    13,
    51,
    148,
    37,
    142,
    176,
    56,
    137,
    186,
    103,
    16,
    57,
    186,
    50,
    228,
    209,
    65,
    190,
    46,
    206,
    160,
    233,
    27,
    134,
    66,
    93,
    0,
    239,
    226,
    60,
    252,
    171,
    75,
    148,
    33,
    134,
    44,
    49,
    187,
    117,
    249,
    214,
    17,
    159,
    53,
    35,
    176,
    185,
    2,
    237,
    196,
    44,
    252,
    150,
    101,
    228,
    214,
    212,
    225,
    101,
    168,
    147,
    162,
    98,
    8,
    139,
    217,
    156,
    75,
    166,
    230,
    248,
    14,
    115,
    177,
    36,
    113,
    81,
    169,
    121,
    143,
    14,
    164,
    71,
    232,
    192,
    138,
    183,
    241,
    1,
    202,
    20,
    67,
    150,
    152,
    189,
    90,
    222,
    226,
    27,
    7,
    130,
    180,
    58,
    108,
    133,
    88,
    156,
    205,
    222,
    107,
    52,
    8,
    61,
    170,
    36,
    194,
    226,
    84,
    228,
    148,
    85,
    201,
    254,
    68,
    254,
    68,
    156,
    14,
    89,
    113,
    198,
    248,
    1,
    95,
    50,
    191,
    205,
    138,
    1,
    148,
    228,
    0,
    0,
    0,
    0,
    73,
    69,
    78,
    68,
    174,
    66,
    96,
    130,
  ],
  "type": "Buffer",
}
`;

exports[`svg2png properly render the simple svg 1`] = `
Object {
  "data": Array [
    137,
    80,
    78,
    71,
    13,
    10,
    26,
    10,
    0,
    0,
    0,
    13,
    73,
    72,
    68,
    82,
    0,
    0,
    0,
    2,
    0,
    0,
    0,
    2,
    8,
    6,
    0,
    0,
    0,
    114,
    182,
    13,
    36,
    0,
    0,
    0,
    17,
    73,
    68,
    65,
    84,
    120,
    156,
    99,
    100,
    96,
    96,
    248,
    15,
    196,
    12,
    112,
    6,
    0,
    19,
    26,
    2,
    1,
    82,
    233,
    227,
    56,
    0,
    0,
    0,
    0,
    73,
    69,
    78,
    68,
    174,
    66,
    96,
    130,
  ],
  "type": "Buffer",
}
`;

exports[`svg2png properly report svg parse error 1`] = `"internal error in Neon module: SVG data parsing failed cause unknown token at 2:1"`;
